[tool.poetry]
name = "ml-playground"
version = "0.1.0"
description = "my playground for machine learning"
authors = ["pyto86 <pyto86.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
pandas = "^1.0.3"
sklearn = "^0.0"
tensorflow = "^2.1.0"
tensorflow-estimator = "2.1.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
